# game-of-life

./: CMakeLists.txt  README.md
src/: main.cpp
src/game/: CMakeLists.txt  Engine.cpp  Engine.h
src/game/common/: CMakeLists.txt  Cell.cpp  Cell.h  Field.cpp  Field.h  Vector2D.h
src/game/gui/: CMakeLists.txt  GameScene.cpp  GameScene.h  Scene.cpp  Scene.h  WindowManager.cpp  WindowManager.h
